started working on HackAssembler

--- a/projects/06/HackAssembler/package.json
+++ b/projects/06/HackAssembler/package.json
@@ -4,6 +4,7 @@
   "description": "node assembler to parse .asm files and convert to .hack binary files",
   "main": "index.js",
   "scripts": {
+    "assemble": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Michael Martinez",
