--- a/projects/06/HackAssembler/package.json
+++ b/projects/06/HackAssembler/package.json
@@ -5,8 +5,11 @@
   "main": "index.js",
   "scripts": {
     "assemble": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "author": "Michael Martinez",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "jest": "^25.1.0"
+  }
 }
